--- a/recipes/healing-cabbage-soup.html
+++ b/recipes/healing-cabbage-soup.html
@@ -6,7 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Healing Cabbage Soup</h1>
     <a href="../index.html">Home</a>
+    <h1>Healing Cabbage Soup</h1>
+    <img src="https://www.allrecipes.com/thmb/C83ydXgcHx2G5xpjd6xCM6QFTE8=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/82923-healing-cabbage-soup-DDMFS-4x3-3a90f759a83b41e08810d1393d8929ee.jpg" 
+    alt="Pic of healing cabbage soup" >
+    <h2>Description</h2>
+    <p>My body craves this cabbage soup whenever I have a cold, 
+    but it's equally delicious on a cold winter's night.</p>
+    <p>It's so easy to make; add extra vegetables, leftover chicken, or rice for a more substantial meal.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>3 tablespoons olive oil</li>
+        <li>½ onion, chopped</li>
+        <li>2 cloves garlic, chopped</li>
+        <li>2 quarts water</li>
+        <li>4 teaspoons chicken bouillon granules</li>
+        <li>1 teaspoon salt, or to taste</li>
+        <li>½ teaspoon black pepper, or to taste</li>
+        <li>½ head cabbage, cored and coarsely chopped</li>
+        <li>1 (14.5 ounce) can Italian-style stewed tomatoes, drained and diced</li>
+    </ul>
+
 </body>
 </html>
