--- a/recipes/healing-cabbage-soup.html
+++ b/recipes/healing-cabbage-soup.html
@@ -27,5 +27,13 @@
         <li>1 (14.5 ounce) can Italian-style stewed tomatoes, drained and diced</li>
     </ul>
 
+    <ol>
+        <li>In a large stockpot, heat olive oil over medium heat. Stir in onion and garlic; cook until onion is transparent, about 5 minutes.</li>
+        <li>Stir in water, bouillon, salt, and pepper. Bring to a boil, then stir in cabbage. Simmer until cabbage wilts, about 10 minutes.</li>
+        <li>Stir in tomatoes. Return to a boil, then simmer 15 to 30 minutes, stirring often.</li>
+        <li>Serve hot and enjoy!</li>
+        <li><img src="https://www.allrecipes.com/thmb/IBPlGgfyGD9AfgF0-YMGpCOYJ-c=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/82923-healing-cabbage-soup-DDMFS-4x3-3a90f759a83b41e08810d1393d8929ee.jpg" alt="Finished soup"></li>
+    </ol>
+
 </body>
 </html>
