--- a/recipes/healing-cabbage-soup.html
+++ b/recipes/healing-cabbage-soup.html
@@ -26,7 +26,7 @@
         <li>½ head cabbage, cored and coarsely chopped</li>
         <li>1 (14.5 ounce) can Italian-style stewed tomatoes, drained and diced</li>
     </ul>
-
+    <h3>Steps</h3>
     <ol>
         <li>In a large stockpot, heat olive oil over medium heat. Stir in onion and garlic; cook until onion is transparent, about 5 minutes.</li>
         <li>Stir in water, bouillon, salt, and pepper. Bring to a boil, then stir in cabbage. Simmer until cabbage wilts, about 10 minutes.</li>
