Add steps to carbonara and finish picture

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -11,7 +11,7 @@
     <img src="https://www.allrecipes.com/thmb/6UaBC03j_WXNoBfyOgW2hDMec2g=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/245775-spaghetti-alla-carbonara-the-traditional-italian-recipe-DDMFS-4x3-879c32ee3cfb463582e3e6230e311029.jpg" alt="Spaghetti alla Carbonara">
     <h2>Description</h2>
     <p>Carbonara is made with guanciale (cured pork), eggs, Pecorino Romano cheese, spaghetti pasta, and lots of black pepper. Italians don't add extra ingredients like cream, milk, garlic, or onions.</p>
-    <h2>Ingredients</h2>
+    <h3>Ingredients</h3>
     <ul>
         <li>2 teaspoons olive oil</li>
         <li>1 pound guanciale (cured pork cheek), diced</li>
@@ -20,6 +20,17 @@
         <li>10 tablespoons grated Pecorino Romano cheese, divided</li>
         <li>salt and freshly ground black pepper to taste</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Heat olive oil in a large skillet over medium heat; add guanciale (see Cook's Note). Cook, turning occasionally, until evenly browned and crispy, 5 to 10 minutes. Remove from heat and drain on paper towels.</li>
+        <li>Bring a large pot of salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 9 minutes. Drain and return to the pot. Let cool, stirring occasionally, about 5 minutes.</li>
+        <li>Whisk eggs, 1/2 of the Pecorino Romano cheese, and some black pepper in a bowl until smooth and creamy.</li>
+        <li>Pour egg mixture over pasta, stirring quickly, until creamy and slightly cooled. Stir in guanciale.</li>
+        <li>Top with remaining Pecorino Romano cheese and more black pepper.</li>
+        <li>Enjoy!</li>
+    </ol>
+    <img src="https://www.allrecipes.com/thmb/InzCzO3OWS1inqCRU3AJhv33fhg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/245775-spaghetti-alla-carbonara-the-traditional-italian-recipe-DDMFS-4x3-879c32ee3cfb463582e3e6230e311029.jpg" alt="finished carbonara">
+
     
 </body>
 </html>
