--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,6 +11,20 @@
     <img src="https://www.allrecipes.com/thmb/ZAe9AvP7-r27sDDKsFoaTdAgKiU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/12011-Easy-Lasagna-DDMFS-4x3-1491-62dd050e31b849f1bb54e13becf5cb98.jpg" alt="Picture of lasagna">
     <h2>Description</h2>
     <p>An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!</p>
-    
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 pound lean ground beef</li>
+        <li>1 (32 ounce) jar spaghetti sauce</li>
+        <li>32 ounces cottage cheese</li>
+        <li>3 cups shredded mozzarella cheese, divided</li>
+        <li>2 eggs</li>
+        <li>½ cup grated Parmesan cheese</li>
+        <li>2 teaspoons dried parsley</li>
+        <li>salt to taste</li>
+        <li>ground black pepper to taste</li>
+        <li>9 lasagna noodles</li>
+        <li>½ cup water</li>
+    </ul>
 </body>
 </html>
