--- a/recipes/healing-cabbage-soup.html
+++ b/recipes/healing-cabbage-soup.html
@@ -9,7 +9,7 @@
     <a href="../index.html">Home</a>
     <h1>Healing Cabbage Soup</h1>
     <img src="https://www.allrecipes.com/thmb/C83ydXgcHx2G5xpjd6xCM6QFTE8=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/82923-healing-cabbage-soup-DDMFS-4x3-3a90f759a83b41e08810d1393d8929ee.jpg" 
-    alt="Pic of healing cabbage soup" >
+    alt="Pic of healing cabbage soup" height="150" width="150" >
     <h2>Description</h2>
     <p>My body craves this cabbage soup whenever I have a cold, 
     but it's equally delicious on a cold winter's night.</p>
@@ -32,8 +32,7 @@
         <li>Stir in water, bouillon, salt, and pepper. Bring to a boil, then stir in cabbage. Simmer until cabbage wilts, about 10 minutes.</li>
         <li>Stir in tomatoes. Return to a boil, then simmer 15 to 30 minutes, stirring often.</li>
         <li>Serve hot and enjoy!</li>
-        <li><img src="https://www.allrecipes.com/thmb/IBPlGgfyGD9AfgF0-YMGpCOYJ-c=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/82923-healing-cabbage-soup-DDMFS-4x3-3a90f759a83b41e08810d1393d8929ee.jpg" alt="Finished soup"></li>
     </ol>
-
+    <img src="https://www.allrecipes.com/thmb/IBPlGgfyGD9AfgF0-YMGpCOYJ-c=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/82923-healing-cabbage-soup-DDMFS-4x3-3a90f759a83b41e08810d1393d8929ee.jpg" alt="Finished soup" height="150" width="150">
 </body>
 </html>
