--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Lasagna</h1>
-    <img src="https://www.allrecipes.com/thmb/ZAe9AvP7-r27sDDKsFoaTdAgKiU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/12011-Easy-Lasagna-DDMFS-4x3-1491-62dd050e31b849f1bb54e13becf5cb98.jpg" alt="Picture of lasagna">
+    <img src="https://www.allrecipes.com/thmb/ZAe9AvP7-r27sDDKsFoaTdAgKiU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/12011-Easy-Lasagna-DDMFS-4x3-1491-62dd050e31b849f1bb54e13becf5cb98.jpg" alt="Picture of lasagna" height="150" width="150">
     <h2>Description</h2>
     <p>An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!</p>
 
@@ -36,6 +36,6 @@
         <li>Bake in the preheated oven for 45 minutes. Uncover and bake for an additional 10 minutes. Let stand 10 minutes before serving.</li>
         <li>Serve and enjoy!</li>
     </ol>
-    <img src="https://www.allrecipes.com/thmb/yVa9kIzuudG8JunWxhWfDMj2e_Q=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/12011-Easy-Lasagna-DDMFS-4x3-1491-62dd050e31b849f1bb54e13becf5cb98.jpg" alt="Finished lasagna">
+    <img src="https://www.allrecipes.com/thmb/yVa9kIzuudG8JunWxhWfDMj2e_Q=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/12011-Easy-Lasagna-DDMFS-4x3-1491-62dd050e31b849f1bb54e13becf5cb98.jpg" alt="Finished lasagna" height="150" width="150">
 </body>
 </html>
